<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/productListFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/products" />
    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/wishlist" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/cart" />
    <item
        android:id="@+id/orderListFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>